--- a/index.html
+++ b/index.html
@@ -27,9 +27,10 @@
 <p style="text-align:center;font-size:20px;">VIDEO</p>
 <div style="text-align:center;font-size:30px;">
 <hr>
-<iframe width="760" height="415" src="https://www.youtube.com/embed/1qlrRmRTbVY?si=la7CGlzWYpURohPU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+<iframe width="560" height="515" src="https://www.youtube.com/embed/1qlrRmRTbVY?si=la7CGlzWYpURohPU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
 </div>
 <hr>
 <br>
+<a style="text-align:center;font-size:30px;" href="https://forms.gle/iQGcGygGZza2d1Ks7">CONTACT</a>
 <p style="text-align:center;font-size:20px;">© 2025 FROZNMUSE. All rights reserved.</p>									
