--- a/index.html
+++ b/index.html
@@ -32,5 +32,6 @@
 </div>
 <hr>
 <br>
-<a style="text-align:center;font-size:30px;" href="https://forms.gle/iQGcGygGZza2d1Ks7">CONTACT</a>
+<div style="text-align:center:font-size30px;background-color:red;">
+<a style="text-align:center;font-size:30px;" href="https://forms.gle/iQGcGygGZza2d1Ks7">CONTACT</a></div>div>
 <p style="text-align:center;font-size:20px;">© 2025 FROZNMUSE. All rights reserved.</p>									
