--- a/index.html
+++ b/index.html
@@ -21,11 +21,13 @@
 
 
 <br>
+<center>
 <img src="photo1.png" width="200" height="280">
 <img src="photo2.png" width="250" height="280">
 <img src="photo4.png" width="250" height="280"></br>
 <p style="text-align:center;font-size:20px;">VIDEO</p>
 <div style="text-align:center;font-size:30px;">
+</center>
 <hr>
 <iframe width="960" height="515" src="https://www.youtube.com/embed/1qlrRmRTbVY?si=la7CGlzWYpURohPU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
