--- a/index.html
+++ b/index.html
@@ -29,8 +29,9 @@
 <div style="text-align:center;font-size:30px;">
 </center>
 <hr>
-<iframe width=960" height="515" src="https://www.youtube.com/embed/1qlrRmRTbVY?si=la7CGlzWYpURohPU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-
+<center>
+<iframe width="960" height="515" src="https://www.youtube.com/embed/1qlrRmRTbVY?si=la7CGlzWYpURohPU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+</center>
 </div>
 <hr>
 <br>
