--- a/home.html
+++ b/home.html
@@ -17,10 +17,13 @@
 
 
 <br>
+<center>
 <img src="photo1.png" width="200" height="280">
 <img src="photo2.png" width="250" height="280">
 <img src="photo4.png" width="250" height="280"></br>
+</center>
 <hr>
+
 <p style="font-size:20px;text-align:center;"><i>VIDEO</i></P>
 <div style="text-align:center;font-size:30px;">
 <iframe width=960" height="515" src="https://www.youtube.com/embed/1qlrRmRTbVY?si=la7CGlzWYpURohPU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
