--- a/about.html
+++ b/about.html
@@ -53,7 +53,7 @@ Experimental & Crazy Flavors<br>
 Now I’m wondering, do you have a favorite flavor—or maybe you’ve dreamed up a crazy ice cream idea? 🍦
 .</p>
 
-<div style="text-align:center;"><a style="font-size:20px;background-color:red;padding:15px 35px 15px 25px;color:white;text-align:center;"href="https://en.wikipedia.org/wiki/Ice_cream">Readmore</a></div><br>
+<div style="text-align:center;"><a style="font-size:20px;background-color:red;padding:15px 35px 15px 25px;color:white;text-align:center;target=_blank" href="https://en.wikipedia.org/wiki/Ice_cream">Readmore</a></div><br>
 
 
 
