--- a/home.html
+++ b/home.html
@@ -5,7 +5,7 @@
 <h1 style="text-align:center;font-size:30px;"><q>Where every scope is a symphony of sweetness.</q></h1>
 <p style="text-align:center;font-size:19px;">Indulge in the creamy delight that melts hearts and cools cravings—ice cream, the sweetest escape in every scoop! 🍦 Whether classic or quirky, every flavor tells a delicious story worth savoring.</p>
 
-<div style="text-align:center;"><a style="font-size:20px;background-color:red;padding:15px 35px 15px 25px;color:white;text-align:center;"href="https://en.wikipedia.org/wiki/Ice_cream">Readmore</a></div><br>
+<div style="text-align:center;"><a style="font-size:20px;background-color:red;padding:15px 35px 15px 25px;color:white;text-align:center;target=_blank;"href="https://en.wikipedia.org/wiki/Ice_cream">Readmore</a></div><br>
 
 <hr>
 <div>
