--- a/services.html
+++ b/services.html
@@ -38,6 +38,6 @@ Want me to tweak this to match your brand’s vibe or add more technical details
 .</p>
 <hr>
 
-<div style="text-align:center;"><a style="font-size:20px;background-color:red;padding:15px 35px 15px 25px;color:white;text-align:center;"href="https://en.wikipedia.org/wiki/Ice_cream">Readmore</a></div><br>
+<div style="text-align:center;"><a style="font-size:20px;background-color:red;padding:15px 35px 15px 25px;color:white;text-align:center;target=_blank"href="https://en.wikipedia.org/wiki/Ice_cream">Readmore</a></div><br>
 
 <p style="text-align:center;font-size:20px;">© 2025 FROZNMUSE. All rights reserved.</p>									
